# bsai24021_final-project-dsa

./: .gitignore  API_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE_DIAGRAM.md  BACKEND_STATUS.md  BTREE_QUICK_GUIDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Library.cpp  Library.h  Makefile  README.md  README_BTREE.md  REFACTORING_SUMMARY.md  ROADMAP.md  User.cpp  User.h  add_more_books.py  add_more_books2.py  book.cpp  book.h  cleanup.txt  fetch_real_books.py  fetch_real_comic_manga_covers.py  generate_1000_famous_books.py  generate_books_data.py  generate_famous_books.py  generate_organized_library.py  library_data.json  main.cpp  mykey.pem  remove_comments.py  remove_comments.sh  remove_comments_safe.py  run_tests.sh  ssh-keygen -t ed25519 -C "your_email@example.com"  ssh-keygen -t ed25519 -C "your_email@example.com".pub  update_comic_manga_covers.py  update_cover_images.py
backend/include/api/: Router.h
backend/include/controllers/: BookController.h  BorrowController.h  StatisticsController.h  UserController.h
backend/include/data_structures/: BTree.h  HashTable.h
backend/include/http/: HttpModels.h  HttpServer.h
backend/include/models/: Book.h  User.h
backend/include/services/: Library.h
backend/src/: main.cpp  main_api.cpp  main_http.cpp
config/: app.conf
docs/: API.md  API_ENDPOINTS.md  ARCHITECTURE.md  DEVELOPMENT.md
frontend/: README.md  api-config.example.js  api-config.js  app.js  category-loader.js  comics.html  index-new.html  index.html  library-app.js  library-styles.css  library.html  management-app.js  mangas.html  novels.html  styles-new.css  styles.css  test-connection.html
tests/: test_btree.cpp
(+13 files in other folders)
